--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
                                                         <p class="help-block text-danger"></p>
                                                     </div>
                                                 </div>
-                                                <div class="control-group">
+                                                <!-- <div class="control-group">
                                                     <div class="form-group">
                                                         <label>Phone</label>
                                                         <input type="phone" class="form-control" placeholder="Your Phone Number" id="phone" required data-validation-required-message="Please enter your phone number" name="_replyto">
                                                         <p class="help-block text-danger"></p>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                                 <div class="control-group">
                                                     <div class="form-group">
                                                         <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required data-validation-required-message="Please leave a message" name="message"></textarea>
