--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div id="card-eight" class="card">
                             <h1>PORTFOLIO</h1>
                             <h4>Digtal Renaissance</h4>
-                            <p>This webapp is a concept for a platfrom on which artists could share and monetize their individual skills. This was a team project built using Angular, which implemets Node.js, and uses a PostgreSQL database. It was deployed
+                            <p>This web app is a concept for a platfrom on which artists could share and monetize their individual skills. This was a team project built using Angular, which implements Node.js, and uses a PostgreSQL database. It was deployed
                                 using Heroku.</p>
                             <a target="blank" href="https://dr-client.herokuapp.com/home"><img id="dr-img" src="./assets/dr-screenshot.png"></img>
                             </a>
@@ -110,7 +110,7 @@
                             </a>
                             <hr/>
                             <h4>La Sirena Del Rio</h4>
-                            <p>A static store front site I made for a friend who is starting her own business, built with HTML and CSS. </p>
+                            <p>A static store front site made for a friend who is starting her own business, built with HTML and CSS. </p>
                             <a target="blank" href="https://jessetsmith.github.io/laSirenaDelRio/"><img id="rio-img" src="./assets/rio-screenshot.png"></img>
                             </a>
                             <hr/>
