--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                         </div>
                         <div id="card-eight" class="card">
                             <h1>PORTFOLIO</h1>
-                            <h4>Digtal Renaissance</h4>
+                            <h4>Digital Renaissance</h4>
                             <p>This web app is a concept for a platfrom on which artists could share and monetize their individual skills. This was a team project built using Angular, which implements Node.js, and uses a PostgreSQL database. It was deployed
                                 using Heroku.</p>
                             <a target="blank" href="https://dr-client.herokuapp.com/home"><img id="dr-img" src="./assets/dr-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>MuvieBuff</h4>
-                            <p>This is a webapp for storing and cataloging movie collections and lists. Built using REACT, it utilizes Node.js, and a PostgreSQL database. Deployment environment: Heroku.</p>
+                            <p>This is a web app for storing and cataloging movie collections and lists. Built using REACT, it utilizes Node.js, and a PostgreSQL database. Deployment environment: Heroku.</p>
                             <a target="blank" href="https://js-muviebuff-client.herokuapp.com/home"><img id="gir-img" src="./assets/muvie-screenshot.png"></img>
                             </a>
                             <hr/>
@@ -115,7 +115,7 @@
                             </a>
                             <hr/>
                             <h4>Static Layout Project</h4>
-                            <p>An assignment in which we were expected to recreate an existing website (original site: https://www.bungie.net/).</p>
+                            <p>An assignment in which we were expected to recreate an existing website (original site: <a href="https://www.bungie.net">bungie.net</a>).</p>
                             <a target="blank" href="https://jessetsmith.github.io/staticLayout/"><img id="gir-img" src="./assets/static-screenshot.png"></img>
                             </a>
                             <hr/>
