fixed link to target=blank

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </a>
                             <hr/>
                             <h4>Static Layout Project</h4>
-                            <p>An assignment in which we were expected to recreate an existing website (original site: <a href="https://www.bungie.net">bungie.net</a>).</p>
+                            <p>An assignment in which we were expected to recreate an existing website (original site: <a target="blank" href="https://www.bungie.net">bungie.net</a>).</p>
                             <a target="blank" href="https://jessetsmith.github.io/staticLayout/"><img id="gir-img" src="./assets/static-screenshot.png"></img>
                             </a>
                             <hr/>
