added hover effects and footer

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item" id="nav-item-intro"><a id="intro" href="#card-two">INTRO</a></li>
-                <li class="nav-item" id="nav-item-about"><a id="about" href="#card-four">ABOUT</a></li>
-                <li class="nav-item" id="nav-item-credentials"><a id="credentials" href="#card-six">CREDENTIALS</a></li>
-                <li class="nav-item" id="nav-item-accounts"><a id="accounts" href="#card-seven">ACCOUNTS</a></li>
-                <li class="nav-item" id="nav-item-builds"><a id="builds" href="#card-eight">PORTFOLIO</a></li>
-                <li class="nav-item" id="nav-item-contact"><a id="contact" href="#card-nine">CONTACT</a></li>
+                <li class="nav-item" id="nav-item-intro"><a id="nav" href="#card-two">INTRO</a></li>
+                <li class="nav-item" id="nav-item-about"><a id="nav" href="#card-four">ABOUT</a></li>
+                <li class="nav-item" id="nav-item-credentials"><a id="nav" href="#card-six">CREDENTIALS</a></li>
+                <li class="nav-item" id="nav-item-accounts"><a id="nav" href="#card-seven">ACCOUNTS</a></li>
+                <li class="nav-item" id="nav-item-builds"><a id="nav" href="#card-eight">PORTFOLIO</a></li>
+                <li class="nav-item" id="nav-item-contact"><a id="nav" href="#card-nine">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -101,32 +101,32 @@
                             <h4>Digital Renaissance</h4>
                             <p>This web app is a concept for a platfrom on which artists could share and monetize their individual skills. This was a team project built using Angular, which implements Node.js, and uses a PostgreSQL database. It was deployed
                                 using Heroku.</p>
-                            <a target="blank" href="https://dr-client.herokuapp.com/home"><img id="dr-img" src="./assets/dr-screenshot.png"></img>
+                            <a target="blank" href="https://dr-client.herokuapp.com/home"><img id="port-img" src="./assets/dr-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>MuvieBuff</h4>
                             <p>This is a web app for storing and cataloging movie collections and lists. Built using REACT, it utilizes Node.js, and a PostgreSQL database. Deployment environment: Heroku.</p>
-                            <a target="blank" href="https://js-muviebuff-client.herokuapp.com/home"><img id="gir-img" src="./assets/muvie-screenshot.png"></img>
+                            <a target="blank" href="https://js-muviebuff-client.herokuapp.com/home"><img id="port-img" src="./assets/muvie-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>La Sirena Del Rio</h4>
                             <p>A static store front site made for a friend who is starting her own business, built with HTML and CSS. </p>
-                            <a target="blank" href="https://jessetsmith.github.io/laSirenaDelRio/"><img id="rio-img" src="./assets/rio-screenshot.png"></img>
+                            <a target="blank" href="https://jessetsmith.github.io/laSirenaDelRio/"><img id="port-img" src="./assets/rio-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>Static Layout Project</h4>
                             <p>An assignment in which we were expected to recreate an existing website (original site: <a target="blank" href="https://www.bungie.net">bungie.net</a>).</p>
-                            <a target="blank" href="https://jessetsmith.github.io/staticLayout/"><img id="gir-img" src="./assets/static-screenshot.png"></img>
+                            <a target="blank" href="https://jessetsmith.github.io/staticLayout/"><img id="port-img" src="./assets/static-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>Oculi Ad Astra</h4>
                             <p>A rendering of a Ghost, a character from the video game Destiny and Destiny 2, created using only HTML and CSS.</p>
-                            <a target="blank" href="https://codepen.io/jessetsmith/full/yLOeQwb"><img id="ghost-img" src="./assets/ghost-screenshot.png"></img>
+                            <a target="blank" href="https://codepen.io/jessetsmith/full/yLOeQwb"><img id="port-img" src="./assets/ghost-screenshot.png"></img>
                             </a>
                             <hr/>
                             <h4>Gir</h4>
                             <p>A rendering of Gir, a character from the show Invader Zim, created using only HTML and CSS.</p>
-                            <a target="blank" href="https://codepen.io/jessetsmith/full/oNvrZmg"><img id="gir-img" src="./assets/gir-screenshot.png"></img>
+                            <a target="blank" href="https://codepen.io/jessetsmith/full/oNvrZmg"><img id="port-img" src="./assets/gir-screenshot.png"></img>
                             </a>
                             <hr/>
 
@@ -183,6 +183,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <a target="blank" class="nav-item" id="github" href="https://github.com/jessetsmith">&copy cappellacoding 2020</a>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
